--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@remix-run/node": "^2.16.5",
     "@remix-run/react": "^2.16.5",
     "@remix-run/serve": "^2.16.5",
+    "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "supabase": "^2.22.6"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.5",
